// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-kfZjQZ kicBZi"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Default color is Bulma
  </h3>
  <h3
    className="sc-kfZjQZ dccGUz"
    color="piccolo.100"
    size={16}
  >
    Piccolo
  </h3>
  <h3
    className="sc-kfZjQZ iZAPRt"
    color="trunks.100"
    size={16}
  >
    Trunks
  </h3>
  <h3
    className="sc-kfZjQZ fLxxST"
    color="krillin.100"
    size={16}
  >
    Krillin
  </h3>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Default font-weight is bold
  </h3>
  <h3
    className="sc-kfZjQZ dfokzb"
    color="bulma.100"
    size={16}
  >
    Font-weight is regular
  </h3>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Line-height is pre-calculated
  </h3>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Custon line-height
  </h3>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    H3 is a default tag
  </h3>
  <h2
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    H2 tag
  </h2>
  <h6
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    H6 tag
  </h6>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Default font-size is 16px
  </h3>
  <h3
    className="sc-kfZjQZ cuXpex"
    color="bulma.100"
    size={24}
  >
    Size is 24px
  </h3>
  <h3
    className="sc-kfZjQZ ijtewC"
    color="bulma.100"
    size={48}
  >
    Size is 48px
  </h3>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Text-align is not specified
  </h3>
  <h3
    className="sc-kfZjQZ cmgCqd"
    color="bulma.100"
    size={16}
  >
    Centered Heading
  </h3>
  <h3
    className="sc-kfZjQZ hQyzay"
    color="bulma.100"
    size={16}
  >
    Right alignment
  </h3>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Default text-decoration is none
  </h3>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Underline Heading
  </h3>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Default text-transform is none
  </h3>
  <h3
    className="sc-kfZjQZ kicBZi"
    color="bulma.100"
    size={16}
  >
    Uppercase Heading
  </h3>
</div>
`;
